# envdiff

./: README.md  pyproject.toml
src/envdiff/: __init__.py  __main__.py  core.py
tests/: __init__.py  test_envdiff.py
